Finished webgl page

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://stevenmengin.com/media/assets/social.jpg">
+    <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="http://jacob">
-    <meta property="og:url" content="http://stevenmengin.com">
+    <meta property="og:url" content="http://jacobdfrank.com">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -91,7 +91,7 @@
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div id="ball"></div>
