--- a/taw.html
+++ b/taw.html
@@ -14,12 +14,12 @@
     <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://stevenmengin.com/media/assets/social.jpg">
+    <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="http://jacob">
-    <meta property="og:url" content="http://stevenmengin.com">
+    <meta property="og:url" content="http://jacobdfrank.com">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -89,7 +89,7 @@
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div class="bottom__link link index--rise1">
@@ -129,7 +129,7 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row">
-                        <img src="img/taw/HomeImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HomeImage.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
@@ -140,10 +140,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/HistoryImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/RecapImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/RecapImage.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
@@ -153,10 +153,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/mobileScreens.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/Ipad_screen.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Performance</h2>
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/team.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/team.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
                         <p class="roboto--regular fluid-type14-20">
@@ -175,10 +175,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/history.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/history.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/food.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/food.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
