--- a/webgl.html
+++ b/webgl.html
@@ -14,12 +14,12 @@
     <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://stevenmengin.com/media/assets/social.jpg">
+    <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="http://jacob">
-    <meta property="og:url" content="http://stevenmengin.com">
+    <meta property="og:url" content="http://jacobdfrank.com">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page2">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -89,7 +89,7 @@
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=HelloJacob"> Email</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div class="bottom__link link index--rise1">
@@ -119,7 +119,7 @@
                             </p>
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
-                            <p class="roboto--regular fluid-type14-20">Summer of 2015</p>
+                            <p class="roboto--regular fluid-type14-20">Summer of 2016</p>
                             <p class="roboto--regular fluid-type14-20">Some stills and demos are below</p>
                         </div>
                         <hr class="case__hr">
@@ -132,59 +132,37 @@
                         <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row">
-                        <img src="img/taw/HomeImage.png" class="casestudy__image">
+                        <p data-height="609" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="css,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
                     <div class="casestudy__row column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            I’ve been involved with the ‘Thought At Work’ design conference for nearly two years in several roles, including work on the core conference team, contacting speakers, helping create installations, and most recently, building the website. <br><br>In
-                            mid-July we received the first homepage mock, followed by additional pages in the coming weeks. We used a combination of Bootstrap, our own custom CSS, PHP, JavaScript for some interactions, and JQuery for a handful of animations.
-                            I developed most of the site at first. As other people came on board, I took on a additional managerial role for the entire website and became the lead for the project.
+                            I began this work as a way to fill my spare time with new challenges. In the end, I may have spent several weeks working on this little experiment, creating 40+ pieces of content. It was inspired by creatives like Beeple as well as friends like Luka Schulz
+                            who confronted a similar challenge. <br><br>Please look at some of my work I’ve created. Some are bonafide failures, most are not. After all, you learn the most from failure, right?
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/HistoryImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/RecapImage.png" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            At first we were only given desktop mocks for the site. Two months later we got a mobile mock of the homepage. Without a tablet mock I translated the desktop site to tablet and mobile without compromising the original style and flow of the site content.
-                            From a visual perspective the site lost some of its more interesting aspects. But it retained much of the way the content was laid out and that’s what mattered most.
-                        </p>
+                        <img src="https://taw.imgix.net/shadowBox.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/mobileScreens.png" class="casestudy__image">
+                        <p data-height="265" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="js,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/Ipad_screen.png" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Performance</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            We encountered another challenge very close to the start of the conference. We were given headshots to create a volunteer/team section on the ‘about’ page. We had to display dozens of people with their name and major without losing much performance and
-                            load time.
-                        </p>
+                        <img src="https://taw.imgix.net/shadowBox.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/team.png" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row column col-12">
-                        <p class="roboto--regular fluid-type14-20">
-                            To solve this issue, some JavaScript was written, relying on Imgix, an image compression API, to inject each headshot and appropriate text into the HTML. This compressed the images to a much smaller size without causing performance issues and compromising
-                            the resolution.
-                        </p>
+                        <img src="https://taw.imgix.net/face.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/history.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/cones.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row">
-                        <img src="img/taw/food.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/blackHole.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
