--- a/hawkes.html
+++ b/hawkes.html
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page4">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -101,10 +101,10 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover">
-                <img src="img/glProjectCoverCropped.jpeg" class="case__cover__image">
+                <img src="img/hawkesProjectCoverCropped.jpeg" class="case__cover__image">
                 <div class="case__cover__content">
-                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> WebGL Summer</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- JS, WebGL, Web Audio</h4>
+                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Hawkes Media Group</h1>
+                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
                 </div>
             </div>
             <div class="case__info">
@@ -115,12 +115,12 @@
                         </div>
                         <div class="column col-10 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
-                                Learn new skills. Currently, much of my time has been spent with Three.js. But, I’ve also experimented with the web audio API and p5.js.
+                                Tasked with redesigning a website that hadn’t been updated in more than a decade, filled with flash animations and gratuitous geocities gifs.
                             </p>
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
-                            <p class="roboto--regular fluid-type14-20">Summer of 2016</p>
-                            <p class="roboto--regular fluid-type14-20">Some stills and demos are below</p>
+                            <p class="roboto--regular fluid-type14-20">2 Weeks, January 2017</p>
+                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" class="no-route" target="_blank">Visit Website</a></p>
                         </div>
                         <hr class="case__hr">
                     </div>
@@ -129,37 +129,78 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row">
-                        <p data-height="609" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="css,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">About</h2>
+                        <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            I began this work as a way to fill my spare time with new challenges. In the end, I may have spent several weeks working on this little experiment, creating 40+ pieces of content. It was inspired by creatives like Beeple as well as friends like Luka Schulz
-                            who confronted a similar challenge. <br><br>Please look at some of my work I’ve created. Some are bonafide failures, most are not. After all, you learn the most from failure, right?
+                            Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.<br><br>Hawkes
+                            Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to
+                            complete it.
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding of what a digital media company needs on a site and who they wanted to attract
+                            to the site. <br><br> Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding
+                            of what a digital media company needs on a site and who they wanted to attract to the site.
+                        </p>
+                    </div>
+                    <div class="casestudy__row column col-6">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            I created sketches on paper of a simple interface with a consistent layout. Then I created wireframes for each page. I also used a mind map and information architecture I’d created to guide me along the way.
+                        </p>
+                    </div>
+                    <div class="casestudy__row column col-6">
+                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png" class="casestudy__image">
+                    </div>
+
+                    <div class="casestudy__row column col-12">
+                        <p class="roboto--regular fluid-type14-20">
+                            Hawkes Media supplied a text-based list of clients for one page, but I convinced them that company logos are a stronger visual presentation. It gives the prospective client more confidence in their work when you see a full screen of logos. In addition,
+                            I also got them to reduce some of the text they envisioned in favor of more imagery. After all, they are a media company. Show your best work instead of writing about it.
+                        </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/shadowBox.jpg?w=1&h=1" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png" class="casestudy__image">
+                    </div>
+
+                    <div class="casestudy__row column col-12">
+                        <p class="roboto--regular fluid-type14-20">
+                            Once the wireframes were finished I made a low-fidelity prototype and showed it to the client for feedback. This was followed by higher fidelity wireframes. Taking all these steps made for fewer changes as we moved ahead because the feedback helped me
+                            remove what the client didn’t like. The triangles and diagonal styling I used on the header and footer to give the site more character were stripped away and the Merriweather font was changed to a more plain and modern looking
+                            Open Sans typeface.
+                        </p>
+                    </div>
+                    <div class="casestudy__row column col-6">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Coding</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            During the development of the site I found a way to give the client access to a CMS so that they could collaborate and make minor changes using Webflow. The project was developed using custom code that I would paste into the Webflow editor along with
+                            editor itself for a couple smaller things. CSS Flexbox was used for most of the site and it saved a lot of time with layout. JQuery was also used on some items like the mobile navigation.
+                        </p>
+                    </div>
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Check it Out</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            The current website can be seen <a class="nolink__decoration link__name__color" href="http://www.hawkesmediagroup.com/">here</a>.
+                        </p>
                     </div>
                     <div class="casestudy__row">
-                        <p data-height="265" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="js,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js" ></script>
-                    </div>
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/face.jpg?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/cones.png?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/blackHole.jpg?w=1&h=1" class="casestudy__image">
+                        <p class="roboto--regular fluid-type14-20">
+                            The old site's homepage
+                        </p>
+                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
@@ -182,7 +223,6 @@
             fittype: 'cover', // either contain, cover, fill or none
             disableCrossDomain: 'true' // either 'true' or 'false' to not parse external CSS files.
         });
-        $.fn.fullpage.reBuild();
     </script>
     <!-- <script type="text/javascript" src="js/smoothScroll.js"></script> -->
 
