--- a/seo.html
+++ b/seo.html
@@ -101,9 +101,9 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover">
-                <img src="img/hawkesProjectCoverCropped.jpeg" class="case__cover__image">
-                <div class="case__cover__content">
-                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Hawkes Media Group</h1>
+                <img src="img/seoProjectCoverCropped.jpeg" class="case__cover__image">
+                <div class="case__cover__content--seo">
+                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> RIT SEO</h1>
                     <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
                 </div>
             </div>
@@ -115,12 +115,11 @@
                         </div>
                         <div class="column col-10 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
-                                Tasked with redesigning a website that hadn’t been updated in more than a decade, filled with flash animations and gratuitous geocities gifs.
+                                Tasked with redesigning and developing from the ground up a new site for Rochester Institute of Technology’s Student Employment Office.
                             </p>
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
-                            <p class="roboto--regular fluid-type14-20">2 Weeks, January 2017</p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20">Work-In-Progress</p>
                         </div>
                         <hr class="case__hr">
                     </div>
@@ -128,79 +127,60 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png" class="casestudy__image">
+                    <div class="casestudy__row column col-12">
+                        <h2 class="roboto--bold fluid-type14-20">Learning where to go</h2>
+                        <p class="roboto--regular fluid-type14-20">
+                            The site is a ‘job board’ and information hub for on-campus employers and students. <br><br> After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could
+                            see the most obvious user pain points: poor navigation, confusing hierarchy, and too many clicks needed to get to the user’s end goal. I needed to streamline the user’s path.
+                            <br>
+                            <br> After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could see the most obvious user pain points: poor navigation, confusing hierarchy, and too many
+                            clicks needed to get to the user’s end goal. I needed to streamline the user’s path.After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could see the
+                            most obvious user pain points: poor navigation, confusing hierarchy, and too many clicks needed to get to the user’s end goal. I needed to streamline the user’s path.
+                        </p>
                     </div>
                     <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
+                        <h2 class="roboto--bold fluid-type14-20">Sketching</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.<br><br>Hawkes
-                            Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to
-                            complete it.
+                            I made many iterations for each page, identifying the content and goal. This process brought to light additional user pain points. One such problem dealt with how much information the user had to weed through. A search function wouldn’t be helpful since
+                            the user likely didn’t know what to search for. To solve this issue, I used Google analytics and organized information by type of content onto two pages, giving each piece of content on the page hierarchy based on drop-off
+                            rate.
                         </p>
                     </div>
                     <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_sketches.png" class="casestudy__image">
+                        <p class="roboto--regular fluid-type14-20">After all this was done I shrank the site’s theoretical footprint from 20+ pages to about 6.</p>
                     </div>
                     <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
+                        <h2 class="roboto--bold fluid-type14-20">Wireframes</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding of what a digital media company needs on a site and who they wanted to attract
-                            to the site. <br><br> Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding
-                            of what a digital media company needs on a site and who they wanted to attract to the site.
+                            To begin the wireframes, I laid out the sketches for each specific page. I used a list of references compiled during the research stage and then opened Sketch.
                         </p>
                     </div>
                     <div class="casestudy__row column col-6">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_homepage.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__row column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            I created sketches on paper of a simple interface with a consistent layout. Then I created wireframes for each page. I also used a mind map and information architecture I’d created to guide me along the way.
+                            Currently, I’ve completed only one mid-fidelity wireframe for the site. My goal for the homepage is to explain the student employment office and what users can do and find on the site. I’ve added important contact information, helpful call to actions,
+                            revised the contact section, and there is now a “Next Pay Date” section because people expressed interest in one. A “jobs search” link was also added to the homepage in addition to the one on the navigation bar. The second
+                            jobs link will decrease the time it takes for the user to find what they want.
                         </p>
                     </div>
                     <div class="casestudy__row column col-6">
-                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_verify.png" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row column col-12">
                         <p class="roboto--regular fluid-type14-20">
-                            Hawkes Media supplied a text-based list of clients for one page, but I convinced them that company logos are a stronger visual presentation. It gives the prospective client more confidence in their work when you see a full screen of logos. In addition,
-                            I also got them to reduce some of the text they envisioned in favor of more imagery. After all, they are a media company. Show your best work instead of writing about it.
-                        </p>
-                    </div>
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png" class="casestudy__image">
-                    </div>
-
-                    <div class="casestudy__row column col-12">
-                        <p class="roboto--regular fluid-type14-20">
-                            Once the wireframes were finished I made a low-fidelity prototype and showed it to the client for feedback. This was followed by higher fidelity wireframes. Taking all these steps made for fewer changes as we moved ahead because the feedback helped me
-                            remove what the client didn’t like. The triangles and diagonal styling I used on the header and footer to give the site more character were stripped away and the Merriweather font was changed to a more plain and modern looking
-                            Open Sans typeface.
-                        </p>
-                    </div>
-                    <div class="casestudy__row column col-6">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Coding</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            During the development of the site I found a way to give the client access to a CMS so that they could collaborate and make minor changes using Webflow. The project was developed using custom code that I would paste into the Webflow editor along with
-                            editor itself for a couple smaller things. CSS Flexbox was used for most of the site and it saved a lot of time with layout. JQuery was also used on some items like the mobile navigation.
+                            There likely won’t be 6 social media icons and various links on the navigation bar may be changed. Copy for each page isn’t finalized.
                         </p>
                     </div>
                     <div class="casestudy__row column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Check it Out</h2>
+                        <h2 class="roboto--bold fluid-type14-20">Next Steps</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            The current website can be seen <a class="nolink__decoration link__name__color" href="http://www.hawkesmediagroup.com/">here</a>.
+                            I plan on finishing all the mid-fidelity wireframes in the coming weeks. After the wires are done a mid-fidelity prototype will be made using Craft (by Invision) in Sketch.
                         </p>
-                    </div>
-                    <div class="casestudy__row">
-                        <p class="roboto--regular fluid-type14-20">
-                            The old site's homepage
-                        </p>
-                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
